[project]
name = "bach-youtube138"
version = "2.0.0"
description = "RapidAPI: Glavier/youtube138"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "bachstudio"}
]
keywords = ["mcp", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_youtube138 = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-youtube138"
Repository = "https://github.com/bachstudio/bach-youtube138"
"Bug Tracker" = "https://github.com/bachstudio/bach-youtube138/issues"
Documentation = "https://github.com/bachstudio/bach-youtube138#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
artifacts = ["openapi.json"]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "openapi.json",
    "README.md",
    "LICENSE",
    "__init__.py",
]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'